# rust-diesel-api

./: .env
api/src/: lib.rs  post_handler.rs
application/: Cargo.toml
application/src/post/: delete.rs
domain/: Cargo.toml
domain/src/: schema.rs
infrastructure/: Cargo.toml  diesel.toml
shared/: Cargo.toml
